--- a/contoh.tex
+++ b/contoh.tex
@@ -1,4 +1,5 @@
-\documentclass{ta-its}
+% !TEX program = xelatex
+\documentclass{ta-scientics-matematika-its}
 \usepackage{hyperref} % Hyperlink pada dokumen
 \usepackage{listings} % Kode sumber
 
