--- a/contoh.tex
+++ b/contoh.tex
@@ -7,17 +7,17 @@
 \title{Templat \LaTeX{} untuk Kebutuhan Penulisan Buku Tugas Akhir di ITS Surabaya}{A \LaTeX{} Template for Setting Up a Final Project Booklet for ITS Surabaya}{Kxxxxx} 
 
 % \author{Nama Lengkap}{NRP}
-\author{Putu Wiramaswara Widya}{5111100012}
+\author{Nama Mahasiswa}{1234567890}
 
 % \supervisorOne{Nama Pembimbing Satu}{NIP}
 % \supervisorTwo{Nama Pembimbing Dua}{NIP}
-\supervisorOne{Royyana Muslim Ijtihadie, S.Kom, M.Kom, PhD}{197708242006041001}
+\supervisorOne{Nama Dosen}{1234567890123456}
 
 % \degree{Nama Gelar}{Bidang Studi}{Program Studi}{Jurusan}{Jurusan (English)}{Fakultas}{Fakultas Singkatan}{Fakultas (English)}
-\degree{Sarjana Komputer}{Arsitektur dan Jaringan Komputer}{S1}{Teknik Informatika}{Informatics}{Teknologi Informasi}{FTIf}{Information Technology}
+\degree{Sarjana Matematika}{Ilmu Komputer}{S1}{Matematika}{Mathematics}{Sains dan Analitika Data}{Scientics}{Science and Data Analytics}
 
 % \time{bulan}{tahun}
-\time{Januari}{2015}
+\time{September}{2020}
 
 \begin{document}
     \frontmatter % Halaman dengan penomoran romawi kecil
